--- a/src/pages/admin/index.css
+++ b/src/pages/admin/index.css
@@ -246,3 +246,544 @@
       }
    }
 }
+
+.admin-layout .modals {
+   width: 100%;
+   height: 100%;
+   top: 0;
+   left: 0;
+   position: fixed;
+   background-color: rgba(0, 0, 0, 0.5);
+   z-index: 110;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+
+   .container {
+      display: flex;
+      max-width: calc(var(--px-256) * 4);
+      width: fit-content;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      flex-direction: column;
+      gap: var(--px-8);
+      background-color: var(--gray-100);
+      padding: var(--px-32) var(--px-16);
+      border-radius: var(--px-12);
+      box-shadow: 1px 1px 4px var(--gray-500);
+      border: calc(var(--px-8) / 3) solid var(--primary);
+
+      .column {
+         flex: 1;
+         max-width: 50%;
+      }
+
+      > h1 {
+         width: 100%;
+         font-size: var(--fs-5);
+         font-weight: 500;
+         color: var(--gray-800);
+      }
+
+      .input.gambar {
+         label {
+            aspect-ratio: 16/9;
+            width: calc(var(--px-256) * 1.5);
+            height: auto;
+            font-size: var(--fs-3);
+            padding: var(--px-8);
+            background-color: var(--thirdnary);
+            border-radius: var(--px-8);
+            border: 1px solid transparent;
+            transition: 0.3s ease;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            overflow: hidden;
+
+            input {
+               display: none;
+            }
+
+            img {
+               position: absolute;
+               top: 0;
+               left: 0;
+               aspect-ratio: 16/9;
+               object-fit: cover;
+               width: 100%;
+               height: 100%;
+            }
+         }
+         label.has-file {
+            background-color: transparent;
+         }
+      }
+
+      .input {
+         min-width: calc(var(--px-256) * 1.5);
+         height: fit-content;
+         display: flex;
+         flex-direction: column;
+
+         label {
+            font-size: var(--fs-3);
+            font-weight: 400;
+         }
+
+         input,
+         select {
+            width: 100%;
+            font-size: var(--fs-3);
+            padding: var(--px-8);
+            background-color: var(--thirdnary);
+            border-radius: var(--px-8);
+            border: 1px solid transparent;
+            transition: 0.3s ease;
+         }
+         input:focus,
+         select:focus {
+            border-color: var(--primary);
+            box-shadow: 0 0 var(--px-16) var(--primary);
+         }
+      }
+
+      .button {
+         margin-top: var(--px-12);
+         width: 100%;
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+
+         .btn {
+            aspect-ratio: 1/1;
+            padding: var(--px-8);
+            background-color: var(--btn-danger);
+            color: var(--white);
+            font-size: var(--fs-5);
+            font-weight: 800;
+            border-radius: var(--px-8);
+            cursor: pointer;
+            transition: 0.3s ease;
+         }
+         .btn.edit {
+            background-color: var(--btn-info);
+            margin-left: var(--px-8);
+         }
+         .btn.save {
+            background-color: var(--btn-save);
+            margin-left: var(--px-8);
+         }
+         .btn.disable,
+         .btn:hover {
+            background-color: var(--gray-200);
+            color: var(--gray-800);
+         }
+      }
+   }
+   .container.loans {
+      flex-direction: row;
+   }
+}
+
+.admin-layout .pages {
+   width: 100%;
+   height: 100%;
+   flex: 1;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   flex-direction: column;
+   gap: var(--px-32);
+   padding: calc(var(--px-128) - var(--px-48)) var(--px-64);
+
+   > .navigation {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      h1 {
+         font-size: var(--fs-7);
+         font-weight: 600;
+         color: var(--gray-800);
+         text-shadow: 1px 1px 2px var(--primary);
+         padding: 0 var(--px-8);
+         border-bottom-right-radius: var(--px-8);
+         border-bottom: calc(var(--px-8) / 2) solid var(--primary);
+      }
+
+      > .container {
+         height: 100%;
+         display: flex;
+      }
+
+      .btn {
+         aspect-ratio: 1/1;
+         width: var(--px-40);
+         margin-right: var(--px-8);
+         padding: var(--px-8);
+         color: var(--gray-100);
+         font-size: var(--fs-3);
+         border-radius: var(--px-16);
+         background-color: var(--btn-save);
+         border-bottom: calc(var(--px-8) / 4) solid var(--primary);
+         border-right: calc(var(--px-8) / 4) solid var(--primary);
+         transition: 0.3s ease;
+         cursor: pointer;
+
+         .icon {
+            width: 100%;
+            height: 100%;
+         }
+      }
+      .btn:hover {
+         cursor: pointer;
+         background-color: var(--primary);
+         color: var(--gray-100);
+      }
+
+      input {
+         min-width: var(--px-256);
+         width: 30%;
+         background-color: var(--gray-100);
+         padding: var(--px-8);
+         padding-left: var(--px-24);
+         border-radius: var(--px-16);
+         border-bottom: calc(var(--px-8) / 4) solid var(--primary);
+         border-right: calc(var(--px-8) / 4) solid var(--primary);
+         font-size: var(--fs-3);
+         font-weight: 400;
+         transition: 0.3s ease;
+      }
+      input:focus {
+         box-shadow: 0 0 var(--px-16) var(--primary);
+      }
+   }
+
+   > .pagination {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .left-section {
+         display: flex;
+         align-items: center;
+         gap: var(--px-16);
+
+         .btn {
+            font-size: var(--fs-4);
+            padding: calc(var(--px-8) / 2) var(--px-24);
+            background-color: var(--primary);
+            color: var(--gray-200);
+            border-radius: var(--px-8);
+            transition: 0.3s ease;
+         }
+         .btn.disable {
+            background-color: var(--gray-300);
+            color: var(--gray-500);
+         }
+         .btn:hover:not(.disable) {
+            cursor: pointer;
+            background-color: var(--gray-500);
+            color: var(--gray-100);
+         }
+      }
+
+      .middle-section {
+         display: flex;
+         justify-content: center;
+         align-content: center;
+         gap: var(--px-8);
+         background-color: var(--gray-200);
+         padding: calc(var(--px-8) / 2) var(--px-8);
+         border-radius: var(--px-12);
+
+         h1 {
+            font-size: var(--fs-5);
+            font-weight: 400;
+            color: var(--gray-800);
+         }
+
+         .btn {
+            background-color: transparent;
+            color: var(--primary);
+            cursor: pointer;
+            transition: 0.3s ease;
+         }
+         .btn:hover {
+            transform: scale(1.1);
+         }
+
+         .icon {
+            aspect-ratio: 1/1;
+            width: var(--px-24);
+            height: 100%;
+         }
+      }
+
+      .right-section {
+         display: flex;
+         align-items: center;
+         gap: calc(var(--px-8) / 2);
+
+         .btn {
+            aspect-ratio: 1/1;
+            height: auto;
+            width: var(--px-40);
+            border-radius: var(--px-8);
+            background-color: var(--gray-200);
+            border: calc(var(--px-8) / 4) solid var(--primary);
+            transition: 0.3s ease;
+            color: var(--primary);
+         }
+         .btn.active {
+            color: var(--gray-200);
+            background-color: var(--primary);
+         }
+         .btn:hover:not(.active) {
+            cursor: pointer;
+            background-color: var(--secondary);
+         }
+      }
+   }
+}
+.admin-layout .users > .container {
+   flex: 1;
+   width: 100%;
+   max-width: 100%;
+   border-top: calc(var(--px-8) / 3) solid var(--primary);
+   border-bottom: calc(var(--px-8) / 3) solid var(--primary);
+
+   table {
+      width: 100%;
+      table-layout: fixed;
+      border-collapse: collapse;
+
+      tr td,
+      tr th {
+         font-size: var(--fs-3);
+         padding: calc(var(--px-8));
+         color: var(--gray-800);
+         text-overflow: ellipsis;
+         overflow: hidden;
+         white-space: nowrap;
+      }
+      tr th {
+         font-weight: 600;
+      }
+      tr td {
+         font-weight: 400;
+         transition: 0.3s ease;
+         border-bottom: calc(var(--px-8) / 4) solid var(--primary);
+         transition: 0.3s ease;
+      }
+
+      tr:hover td {
+         background-color: var(--secondary);
+         cursor: pointer;
+      }
+
+      tr td.last {
+         .button {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: var(--px-16);
+
+            .btn {
+               aspect-ratio: 1/1;
+               width: var(--px-32);
+               height: auto;
+               color: var(--white);
+               background-color: var(--btn-danger);
+               display: flex;
+               justify-content: center;
+               align-items: center;
+               border-radius: var(--px-8);
+               transition: 0.3s ease;
+               cursor: pointer;
+
+               .icon {
+                  width: 90%;
+                  height: 90%;
+                  background-color: transparent;
+               }
+            }
+            .btn:first-child {
+               background-color: var(--btn-info);
+            }
+            .btn:hover {
+               transform: scale(1.1);
+            }
+         }
+      }
+   }
+}
+.admin-layout .rooms > .container {
+   flex: 1;
+   width: 100%;
+   max-width: 100%;
+   border-top: calc(var(--px-8) / 3) solid var(--primary);
+   border-bottom: calc(var(--px-8) / 3) solid var(--primary);
+
+   table {
+      width: 100%;
+      table-layout: fixed;
+      border-collapse: collapse;
+
+      tr td,
+      tr th {
+         font-size: var(--fs-3);
+         padding: calc(var(--px-8));
+         color: var(--gray-800);
+         text-overflow: ellipsis;
+         overflow: hidden;
+         white-space: nowrap;
+      }
+      tr th {
+         font-weight: 600;
+      }
+      tr td {
+         font-weight: 400;
+         transition: 0.3s ease;
+         border-bottom: calc(var(--px-8) / 4) solid var(--primary);
+         transition: 0.3s ease;
+         text-align: center;
+      }
+      tr td:first-child {
+         text-align: left;
+      }
+
+      tr:hover td {
+         background-color: var(--secondary);
+         cursor: pointer;
+      }
+
+      tr td.last {
+         .button {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: var(--px-16);
+
+            .btn {
+               aspect-ratio: 1/1;
+               width: var(--px-32);
+               height: auto;
+               color: var(--white);
+               background-color: var(--btn-danger);
+               display: flex;
+               justify-content: center;
+               align-items: center;
+               border-radius: var(--px-8);
+               transition: 0.3s ease;
+               cursor: pointer;
+
+               .icon {
+                  width: 90%;
+                  height: 90%;
+                  background-color: transparent;
+               }
+            }
+            .btn:first-child {
+               background-color: var(--btn-info);
+            }
+            .btn:hover {
+               transform: scale(1.1);
+            }
+         }
+      }
+   }
+}
+.admin-layout .loans > .container {
+   flex: 1;
+   width: 100%;
+   max-width: 100%;
+   border-top: calc(var(--px-8) / 3) solid var(--primary);
+   border-bottom: calc(var(--px-8) / 3) solid var(--primary);
+   scrollbar-width: 1;
+   overflow-x: auto;
+
+   table {
+      width: 100%;
+      border-collapse: collapse;
+      position: relative;
+
+      tr td,
+      tr th {
+         font-size: var(--fs-3);
+         padding: calc(var(--px-8));
+         color: var(--gray-800);
+         text-overflow: ellipsis;
+         overflow: hidden;
+         white-space: nowrap;
+      }
+      tr th {
+         font-weight: 600;
+      }
+      tr td {
+         font-weight: 400;
+         transition: 0.3s ease;
+         border-bottom: calc(var(--px-8) / 4) solid var(--primary);
+         transition: 0.3s ease;
+         text-align: center;
+      }
+      tr td:first-child {
+         text-align: left;
+      }
+      tr th:last-child,
+      tr td:last-child {
+         position: sticky;
+         right: 0;
+         z-index: 100;
+         background-color: var(--thirdnary);
+      }
+
+      tr:hover td {
+         background-color: var(--secondary);
+         cursor: pointer;
+      }
+
+      tr td.last {
+         .button {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: var(--px-16);
+
+            .btn {
+               aspect-ratio: 1/1;
+               width: var(--px-32);
+               height: auto;
+               color: var(--white);
+               background-color: var(--btn-danger);
+               display: flex;
+               justify-content: center;
+               align-items: center;
+               border-radius: var(--px-8);
+               transition: 0.3s ease;
+               cursor: pointer;
+
+               .icon {
+                  width: 90%;
+                  height: 90%;
+                  background-color: transparent;
+               }
+            }
+            .btn:first-child {
+               background-color: var(--btn-info);
+            }
+            .btn:hover {
+               transform: scale(1.1);
+            }
+         }
+      }
+   }
+}
