--- a/src/layouts/admin.css
+++ b/src/layouts/admin.css
@@ -6,6 +6,9 @@
    align-items: flex-start;
    justify-content: center;
 
+   .sidebar * {
+      user-select: none;
+   }
    .sidebar {
       width: 20vw;
       height: 100vh;
@@ -93,7 +96,7 @@
 
    > .right-content {
       width: 80vw;
-      height: fit-content;
+      min-height: 100svh;
       display: flex;
       flex-direction: column;
       position: relative;
