100% Jadi, belum responsive

--- a/src/index.css
+++ b/src/index.css
@@ -191,6 +191,7 @@ body {
    border: none;
    text-decoration: none;
    scroll-behavior: smooth;
+   transition: 0.3s ease;
 }
 
 /* 3. Enable keyword animations */
