--- a/src/layouts/admin.css
+++ b/src/layouts/admin.css
@@ -52,13 +52,13 @@
                gap: var(--px-8);
                text-align: center;
                justify-content: flex-start;
-               font-size: var(--fs-4);
+               font-size: var(--rfs-4);
                font-weight: 500;
 
                .icon {
                   aspect-ratio: 1/1;
                   height: 100%;
-                  font-size: var(--fs-5);
+                  font-size: var(--rfs-5);
                }
             }
 
@@ -71,9 +71,12 @@
                gap: calc(var(--px-8) / 2);
 
                li {
-                  font-size: var(--fs-3);
+                  width: 100%;
+                  font-size: var(--rfs-3);
                   font-weight: 400;
                   a {
+                     display: block;
+                     width: 100%;
                      color: var(--gray-300);
                   }
                }
@@ -87,7 +90,7 @@
          padding: var(--px-8) 0;
 
          h1 {
-            font-size: calc(var(--fs-1) * 2);
+            font-size: calc(var(--rfs-1) * 2);
             font-weight: 400;
             color: var(--gray-100);
          }
@@ -137,11 +140,14 @@
                .icon {
                   width: 100%;
                   height: 100%;
-                  font-size: var(--fs-8);
+                  font-size: var(--rfs-8);
                   color: var(--primary);
                   background-color: var(--gray-100);
                   border-radius: var(--px-8);
                }
+            }
+            button.mobile {
+               display: none;
             }
             a:hover,
             > button:hover {
@@ -161,7 +167,7 @@
             gap: var(--px-8);
 
             h1 {
-               font-size: var(--fs-5);
+               font-size: var(--rfs-5);
                font-weight: 600;
                color: var(--gray-800);
             }
@@ -170,6 +176,105 @@
                aspect-ratio: 1/1;
                height: var(--px-56);
                width: auto;
+            }
+         }
+      }
+   }
+}
+
+@media screen and (max-width: 1280px) and (orientation: portrait) {
+   .admin-layout {
+      .sidebar {
+         width: 0%;
+         max-width: 312px;
+         position: fixed;
+         left: 0;
+         top: 0;
+         z-index: 1001;
+         overflow: hidden;
+      }
+      .sidebar * {
+         text-overflow: ellipsis;
+         white-space: nowrap;
+      }
+      .sidebar.active {
+         width: 64svw;
+         height: 100svh;
+         display: flex;
+
+         .top-content {
+            padding: var(--spx-8);
+            gap: var(--spx-16);
+
+            .logo {
+               border-bottom: calc(var(--spx-8) / 6) solid var(--gray-100);
+               border-radius: var(--spx-8);
+            }
+
+            .group {
+               border-bottom: calc(var(--spx-8) / 6) solid var(--gray-100);
+               border-radius: calc(var(--spx-8) / 4);
+
+               .header {
+                  gap: var(--spx-8);
+               }
+
+               ul {
+                  margin-top: var(--spx-8);
+                  padding-bottom: var(--spx-16);
+                  padding-left: var(--spx-40);
+                  gap: calc(var(--spx-8) / 2);
+               }
+            }
+         }
+
+         .bottom-content {
+            padding: var(--spx-8) 0;
+         }
+      }
+
+      > .right-content {
+         width: 100vw;
+         height: fit-content;
+         position: relative;
+
+         > .navbar {
+            min-height: fit-content;
+            height: var(--spx-32);
+            padding: var(--spx-8);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+
+            .left-content {
+               gap: var(--spx-8);
+               border: calc(var(--spx-8) / 6) solid var(--primary);
+               border-radius: calc(var(--spx-8) / 2);
+
+               a,
+               > button {
+                  display: none;
+
+                  .icon {
+                     font-size: var(--rfs-6);
+                     border-radius: var(--spx-8);
+                  }
+               }
+               button.mobile {
+                  display: block;
+               }
+            }
+
+            .right-content {
+               gap: var(--spx-8);
+
+               h1 {
+                  font-size: var(--rfs-3);
+               }
+
+               img {
+                  height: var(--spx-32);
+               }
             }
          }
       }
